--- a/public/404.html
+++ b/public/404.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
+  <title>Sorry. We can't find your page.</title>
+  <link rel="stylesheet" href="error-styles.css" type="text/css" charset="utf-8">
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+  <div class="wrapper">
+    <img src="images/404.png">
+    <p>Sorry, but we can't find the page you wanted.</p>
+    <p>Please check your link and try again.</p>
   </div>
 </body>
 </html>
