Added information to the error pages

--- a/public/404.html
+++ b/public/404.html
@@ -10,6 +10,7 @@
     <img src="images/404.png">
     <p>Sorry, but we can't find the page you wanted.</p>
     <p>Please check your link and try again.</p>
+    <p><a href="/">Homepage</a><a href="javascript:history.go(-1)">Back</a></p>
   </div>
 </body>
 </html>
