--- a/public/500.html
+++ b/public/500.html
@@ -9,7 +9,9 @@
   <div class="wrapper">
     <img src="images/500.png">
     <p>The sever didn't seem to like that.</p>
+    <p>Don't worry. We're aware this happened.</p>
     <p>Hopefully this will go better next time.</p>
+    <p><a href="/">Homepage</a><a href="javascript:history.go(-1)">Back</a></p>
   </div>
 </body>
 </html>
